--- a/css/styles.css
+++ b/css/styles.css
@@ -28,15 +28,20 @@ body {
 
 p {
     font-size: 16px;
+    color: var(--Grayish-purple);
+}
+
+h1, h2 {
+    color: var(--Dark-purple)
 }
 
 /* main */
 
 .container {
-    width: 55rem;
+    width: 52rem;
     height: max-content;
     /* max-height: 55rem; */
-    padding: 3rem;
+    padding: 4rem;
     border-radius: 1.5rem;
     background-color: var(--White);
     box-shadow: 0px 0px 60px -35px rgba(0,0,0,0.75);
@@ -44,19 +49,43 @@ p {
 
 .accordion {
     display: flex;
-    align-items: baseline; 
-    justify-content: left;
+    align-items: first center; 
+    justify-content: start;
     flex-direction: row;
-
+    margin: 1rem 0rem 2rem 0rem;
 }
 
+
 .accordion-title {
-    margin: 1rem 0rem 2rem 2rem;
-    font-size: 5rem;
+    margin: 0rem 0rem 0rem 2rem; 
+    font-size: 5.8rem;
+}
+
+.faq {
+    padding: 1rem 0rem;
+}
+
+.faq-border {
+    border-bottom: 1px solid rgb(0, 0, 0, 8%);
 }
 
 .faq-display {
     display: flex;
     align-items: center;
     justify-content: space-between;
+}
+
+.faq-question {
+    font-weight: 600;
+    font-size: 1.8rem;
+    margin-bottom: 0rem;
+}
+
+.faq-btn:hover {
+    cursor: pointer;
+}
+
+.faq-answer {
+    margin-top: 2.32rem;
+    line-height: 2rem;
 }
