Utilice src para cambiar la ruta de la imagen en javaScript

--- a/css/styles.css
+++ b/css/styles.css
@@ -105,16 +105,18 @@ h1, h2 {
     line-height: 2rem;
 }
 
+
 /* JS */
 
 /* .faq-img__minus {
     background-image: url('/assets/images/icon-minus.svg');
 } */
 
+.display-block {
+    display: block;
+}
+
 .display-none {
     display: none;
 }
 
-.display-on {
-    display: block;
-}
