--- a/css/styles.css
+++ b/css/styles.css
@@ -68,7 +68,7 @@ h1, h2 {
     align-items: center; 
     justify-content: left;
     flex-direction: row;
-    margin: 0rem 0rem 1rem 0rem;
+    margin: 0rem 0rem 0.4rem 0rem;
 }
 
 
@@ -80,6 +80,10 @@ h1, h2 {
 
 .faq {
     padding: 2.3rem 0rem;
+}
+
+.padding-bottom {
+    padding-bottom: 0rem;
 }
 
 
